--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,6 @@
   font-family: 'Inter', sans-serif;
 }
 .navbar {
-  max-width: 870px;
-  width: 100%;
-  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,4 +21,69 @@
 }
 .nav-link.active {
   font-weight: 700;
+}
+.header-photo {
+  width: 235px;
+  height: 240px;
+  left: 205px;
+  top: 136px;
+}
+.container {
+  max-width: 870px;
+  width: 100%;
+  margin: auto;
+}
+.header {
+  padding: 70px 0; 
+  display: flex;
+  align-items: center;
+}
+.header-text {
+  margin-left: 45px;
+}
+.header-strong {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 125%;
+}
+.header-heding {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 135%;
+  /* or 32px */
+  letter-spacing: -0.02em;
+  margin-top: 8px;
+  margin-bottom: 24px;
+}
+.header-primary {
+  color: #BF7506;
+}
+.social-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.social-link {
+  padding: 8px;
+  display: inline-block;
+}
+.header-links {
+  display: flex;
+  align-items: center;
+}
+.cv-download {
+  padding: 7px 8px;
+  margin-left: 55px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: #211B12;
+  border-bottom: 2px solid #BF7506;
+}
+.cv-text {
+ margin-left: 7px;
 }
